reformat the text

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 								<span class="image main"><img src="images/apple-id-signup-page-hero.jpg" alt="Apple ID signup page" /></span>
 								<h2>Prvi Problem:</h2>
 								<p>Korisnici u Srbiji imaju velikih problema sa korišćenjem svojih Apple uređaja. Oni žele da njihov proizvod jednostavno radi (just works), od momenta kupovine do momenta korišćenja. Oni se uzdaju u to da je uređaj potrebno samo uključiti, i da više podešavanja (sem najosnovnijih) neće biti.</p>
-								<p>Ali, realnost je drugačija. Korisnici u Srbiji, nakon kupovine, imaju sijaset prepreka pre adekvatnog i potpunog korišćenja svojih Apple uređaja. Prvo moraju napraviti Apple nalog (Apple ID). Da bi to uradili moraju u pomoć pozvati svoje prijatelje da im to nameste. Ili kontaktirati kompaniju gde su kupili uređaj (Macola, operateri, konkurencija).</p>
+								<p>Ali, realnost je drugačija. Korisnici u Srbiji, nakon kupovine, imaju sijaset prepreka pre adekvatnog i potpunog korišćenja svojih Apple uređaja. Prvo moraju napraviti Apple nalog (Apple ID). Da bi to uradili moraju u pomoć pozvati svoje prijatelje da im to nameste. Ili kontaktirati kompaniju gde su kupili uređaj (iStyle, Macola, operateri, konkurencija).</p>
 								<p>Korisnici najčešće kreiraju Američki store iako je to protiv Apple pravila.</p>
 							</section>
 							<section id="drugiproblem" class="main">
 								<h2>Drugi Problem:</h2>
 								<p>Nažalost, nemaju drugu mogućnost. Kada se nalog napravi, počine drugi problem, a to je kupovina aplikacija. Ista nije moguća srpskim karticama. Zato korisnici moraju da kupuju Apple Giftcardove, internet karticama, na inostranim sajtovima. Kako određeni deo korisnika nije upoznat sa ovim načinom kupovine vaučera, u pomoć zove ponovo svoje prijatelje.</p>
-								<p>Macola dobija veliki broj poruka i mejlova, i uvek pomažemo našim dragim klijentima da premoste ove prepreke. Te kodove kasnije moraju da reedemuju (zamene za novac) na svom apple nalogu.</p>
+								<p>Ovlašćeni servisi u Srbiji dobijaju veliki broj poruka i mejlova, i uvek pomažu korisnicima da premoste ove prepreke. Te kodove kasnije moraju da reedemuju (zamene za novac) na svom apple nalogu.</p>
 							</section>
 							<section id="trecicetvrti" class="main">
 								<h2>Treći i Četvrti Problem:</h2>
