add share links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Epl Podrska Srbija</title>
+		<title>Epl Podrska Srbija |  App Store ID u Srbiji</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -51,11 +51,10 @@
 										<p>A vizija je da i Srbija bude u potpunosti podržana od strane Appla.</p>
 										<p>Borite se sa nama, podelite ovo na socijalnim mrežama:</p>
 										<ul class="icons">
-											<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-											<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+											<li><a href="https://twitter.com/home?status=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//epl-podrska-srbija.macserbia.org/&title=Epl%20Podrska%20Srbija%20%7C%20%EF%A3%BF%20App%20Store%20ID%20u%20Srbiji&summary=Vizija%20je%20da%20i%20Srbija%20bude%20u%20potpunosti%20podr%C5%BEana%20od%20strane%20Appla.&source=" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://plus.google.com/share?url=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-google-plus-official"><span class="label">Google+</span></a></li>
 										</ul>
 										<ul class="actions">
 											<li><a href="#prviproblem" class="button">Šta je problem?</a></li>
@@ -110,11 +109,10 @@
 								</ul>
 								<footer class="major">
 									<ul class="icons">
-										<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="https://twitter.com/home?status=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//epl-podrska-srbija.macserbia.org/&title=Epl%20Podrska%20Srbija%20%7C%20%EF%A3%BF%20App%20Store%20ID%20u%20Srbiji&summary=Vizija%20je%20da%20i%20Srbija%20bude%20u%20potpunosti%20podr%C5%BEana%20od%20strane%20Appla.&source=" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://plus.google.com/share?url=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-google-plus-official"><span class="label">Google+</span></a></li>
 									</ul>
 								</footer>
 							</section>
@@ -208,9 +206,15 @@
 											<h2>Da vide da nas ima.</h2>
 										</div>
 								<footer class="major">
+									<ul class="icons">
+										<li><a href="https://twitter.com/home?status=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//epl-podrska-srbija.macserbia.org/&title=Epl%20Podrska%20Srbija%20%7C%20%EF%A3%BF%20App%20Store%20ID%20u%20Srbiji&summary=Vizija%20je%20da%20i%20Srbija%20bude%20u%20potpunosti%20podr%C5%BEana%20od%20strane%20Appla.&source=" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://plus.google.com/share?url=http%3A//epl-podrska-srbija.macserbia.org/" class="icon alt fa-google-plus-official"><span class="label">Google+</span></a></li>
+									</ul>
+
 									<ul class="actions">
-										<li><a href="generic.html" class="button special">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="#" class="button special">Nazad na vrh!</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -220,29 +224,16 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Odricanje odgovornosti</h2>
+							<p>Ova akcija nije sponzorisana od strane nikoga. Mi smo anonimni Apple korisnici iz Srbije, i želimo da uživamo u korišćenju Apple uređaja onako kako je Steve Jobs to zamislio.</p>
+							<p>Zabranjeno je korišćenje ove akcije u promotivne svrhe.</p>
+							<p>Sva autorska prava priloženih fotografija i znakova pripadaju autorima, i deo su Public Domain zaštite autorskih prava. Te su slobodna za korišćenje i modifikaciju u nekomercijalne svrhe.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Nazad na vrh!</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+							<div class="12u$"><span class="image fit"><img src="images/steve-wozniak.jpg" alt=""></span></div>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
