Add link to hashtag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1> #EplPodrskaSrbija</h1>
+						<h1> <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a></h1>
 						<p>Mi, srpski Apple korisnici,<br />
 						želimo iOS App Store</p>
 					</header>
@@ -81,7 +81,7 @@
 								<h2>Treći i Četvrti Problem:</h2>
 								<p>Kada je i to završeno mukama nije kraj.</p>
 								<p>Neke od glavnih opcija nisu dostupne iz razloga nepostojanja Srbije u operativnom sistemu i podršci Appla. Na primer, korisnici ne mogu imati mogućnost iPhoto Family Share opcije, jer se ista koristi samo plaćanjem kartice, a vaučeri nisu omogućeni. Postoji i treći problem, a to je dvostruka autentikacija koja nije moguća, jer ne postoji pozivni broj za Srbiju (+381). A i operativni sistem nije dostupan na srpskom jeziku, što je četvrti problem. Ni Keychain ne radi lako, jer ga je jedino moguće aktivirati aktivacijom sa drugog apple uređaja. iCloud kod nije moguće podesiti iz razloga nepostojanja Srbije sa pozivnim brojem (+381). Sve ovo su poznati problemi, iako se zna da se Apple uređaji prodaju legalno u Srbiji. Potpuno legalno.</p>
-								<p>Zato smo rešili da pokrenemo kampanju #EplPodrskaSrbija kako bi Apple napokon u potpunosti podržao Srbiju i korisnike koji žive na ovim prostorima. Zahvalni smo Applu na svemu do sada, ali potrebna nam je potpuna podrška.</p>
+								<p>Zato smo rešili da pokrenemo kampanju <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a> kako bi Apple napokon u potpunosti podržao Srbiju i korisnike koji žive na ovim prostorima. Zahvalni smo Applu na svemu do sada, ali potrebna nam je potpuna podrška.</p>
 								<p>Pogledajte infografik koji smo pripremili i dajte svoj doprinos tako što ćete zajedno sa nama izvršiti pritisak na Apple. A evo i kako:</p>
 								<div class="12u$"><span class="image fit"><img src="images/infografik.jpg" alt=""></span></div>
 							</section>
@@ -99,7 +99,7 @@
 									<li>
 										<span class="icon major style3 fa-hashtag"></span>
 										<h3>Hashtag</h3>
-										<p>Pisanje Applu kroz društvene mreže uz upotrebu hashtaga #EplPodrskaSrbija</p>
+										<p>Pisanje Applu kroz društvene mreže uz upotrebu hashtaga <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a></p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-area-chart"></span>
@@ -126,15 +126,15 @@
 								<blockquote>
 									“Dear Apple, we are Apple users from Serbia and we demand you start supporting us. We can legally buy all Apple products (except iWatch), via authorised Apple sellers,  but cannot create Serbian app store. Thus are not able to fully use our Apple devices. Customers from Serbia have to break the Apple rules and create U.S. Apple ID and use U.S. app store in order to fully use their Apple products. We demand you create Serbian app store and allow us to use our Serbian payment cards (debit and/or credit). To start supporting Serbia. We want family sharing option. We want two-step authentication. We want Keychain. We want it all.
 									<br><br>
-									Hope you will soon realize what Serbian customers mean to you #EplPodrskaSrbija
+									Hope you will soon realize what Serbian customers mean to you <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a>
 									<br><br>
 									Thank you and best regards, your Serbian customers”
 								</blockquote>
 
 								<h3>Hashtag</h3>
-								<p>Pisanje Applu kroz društvene mreže uz upotrebu hashtaga #EplPodrskaSrbija sa navođenjem primera.</p>
+								<p>Pisanje Applu kroz društvene mreže uz upotrebu hashtaga <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a> sa navođenjem primera.</p>
 								<blockquote>
-									“Hey @apple when will #EplPodrskaSrbija? We dont want to wait any more! Serbian customers”.
+									“Hey @apple when will <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a>? We dont want to wait any more! Serbian customers”.
 								</blockquote>
 
 								<h3>Podelite sa drugima</h3>
@@ -224,7 +224,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Odricanje odgovornosti</h2>
+							<h2>Odricanje od odgovornosti</h2>
 							<p>Ova akcija nije sponzorisana od strane nikoga. Mi smo anonimni Apple korisnici iz Srbije, i želimo da uživamo u korišćenju Apple uređaja onako kako je Steve Jobs to zamislio.</p>
 							<p>Zabranjeno je korišćenje ove akcije u promotivne svrhe.</p>
 							<p>Sva autorska prava priloženih fotografija i znakova pripadaju autorima, i deo su Public Domain zaštite autorskih prava. Te su slobodna za korišćenje i modifikaciju u nekomercijalne svrhe.</p>
