--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+
+		<meta property="og:url" content="http://epl-podrska-srbija.macserbia.org/" />
+		<meta property="og:type" ontent="article" />
+		<meta property="og:title" content="Epl Podrska Srbija |  App Store ID u Srbiji" />
+		<meta property="og:description" content="Mi, srpski Apple korisnici, želimo iOS App Store. Apple uređaji su najnapredniji i najkvalitetniji uređaji koji danas postoje. Mi poslednjih 30 godina korisnici Apple računara u Srbiji i verujemo da Apple donosi najbolje iskustvo koje korisnik može imati. U svakom trenutku. To je i naša misija." />
+		<meta property="og:image" content="images/apple-id-signup-page-hero.jpg" />
+
 	</head>
 	<body>
 
