--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta property="og:type" ontent="article" />
 		<meta property="og:title" content="Epl Podrska Srbija |  App Store ID u Srbiji" />
 		<meta property="og:description" content="Mi, srpski Apple korisnici, želimo iOS App Store. Apple uređaji su najnapredniji i najkvalitetniji uređaji koji danas postoje. Mi poslednjih 30 godina korisnici Apple računara u Srbiji i verujemo da Apple donosi najbolje iskustvo koje korisnik može imati. U svakom trenutku. To je i naša misija." />
-		<meta property="og:image" content="images/apple-id-signup-page-hero.jpg" />
+		<meta property="og:image" content="http://epl-podrska-srbija.macserbia.org/images/apple-id-signup-page-hero.jpg" />
 
 	</head>
 	<body>
