--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 		<meta property="og:description" content="Mi, srpski Apple korisnici, želimo iOS App Store. Apple uređaji su najnapredniji i najkvalitetniji uređaji koji danas postoje. Mi poslednjih 30 godina korisnici Apple računara u Srbiji i verujemo da Apple donosi najbolje iskustvo koje korisnik može imati. U svakom trenutku. To je i naša misija." />
 		<meta property="og:image" content="http://epl-podrska-srbija.macserbia.org/images/apple-id-signup-page-hero.jpg" />
 
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@MacSerbia">
+		<meta name="twitter:creator" content="@MacSerbia">
+		<meta name="twitter:title" content="Epl Podrska Srbija |  App Store ID u Srbiji">
+		<meta name="twitter:description" content="Mi, srpski Apple korisnici, želimo iOS App Store. Apple uređaji su najnapredniji i najkvalitetniji uređaji koji danas postoje. Mi poslednjih 30 godina korisnici Apple računara u Srbiji i verujemo da Apple donosi najbolje iskustvo koje korisnik može imati. U svakom trenutku. To je i naša misija.">
+		<meta name="twitter:image" content="http://epl-podrska-srbija.macserbia.org/images/apple-id-signup-page-hero.jpg">
+
 	</head>
 	<body>
 
