--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<p>Neke od glavnih opcija nisu dostupne iz razloga nepostojanja Srbije u operativnom sistemu i podršci Appla. Na primer, korisnici ne mogu imati mogućnost iPhoto Family Share opcije, jer se ista koristi samo plaćanjem kartice, a vaučeri nisu omogućeni. Postoji i treći problem, a to je dvostruka autentikacija koja nije moguća, jer ne postoji pozivni broj za Srbiju (+381). A i operativni sistem nije dostupan na srpskom jeziku, što je četvrti problem. Ni Keychain ne radi lako, jer ga je jedino moguće aktivirati aktivacijom sa drugog apple uređaja. iCloud kod nije moguće podesiti iz razloga nepostojanja Srbije sa pozivnim brojem (+381). Sve ovo su poznati problemi, iako se zna da se Apple uređaji prodaju legalno u Srbiji. Potpuno legalno.</p>
 								<p>Zato smo rešili da pokrenemo kampanju <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a> kako bi Apple napokon u potpunosti podržao Srbiju i korisnike koji žive na ovim prostorima. Zahvalni smo Applu na svemu do sada, ali potrebna nam je potpuna podrška.</p>
 								<p>Pogledajte infografik koji smo pripremili i dajte svoj doprinos tako što ćete zajedno sa nama izvršiti pritisak na Apple. A evo i kako:</p>
-								<div class="12u$"><span class="image fit"><img src="images/infografik.jpg" alt=""></span></div>
+								<div class="12u$"><span class="image fit"><img src="images/infografik2.jpg" alt=""></span></div>
 							</section>
 						<!-- First Section -->
 							<section id="akcija" class="main special">
