add link to apple support

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<section id="drugiproblem" class="main">
 
 								<h3>Feedback</h3>
-								<p>Ostavljanje feedbacka na Apple stranici https://www.apple.com/feedback/iphone.html gde će se uneti sledeći tekst.</p>
+								<p>Ostavljanje feedbacka na Apple stranici <a href="https://www.apple.com/feedback/iphone.html" target="_blank">https://www.apple.com/feedback/iphone.html</a> gde će se uneti sledeći tekst.</p>
 								<p>Kao vrstu feedbacka uneti: <strong>Design/Ease of use</strong></p>
 								<p>Cilj ovoga je da se pošalje što više feedbackova Applu da prosto moraju da pročitaju.</p>
 								<blockquote>
