Add applesupport channel to tweet

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								<h3>Hashtag</h3>
 								<p>Pisanje Applu kroz društvene mreže uz upotrebu hashtaga <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a> sa navođenjem primera.</p>
 								<blockquote>
-									“Hey @apple when will <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a>? We dont want to wait any more! Serbian customers”.
+									“Hey @apple @AppleSupport when will <a href="https://twitter.com/hashtag/EplPodrskaSrbija?src=hash" target="_blank" title="Twitter hashtag">#EplPodrskaSrbija</a>? We dont want to wait any more! Serbian customers”.
 								</blockquote>
 
 								<h3>Podelite sa drugima</h3>
